[tool.poetry]
name = "backdoor_data_poisoning"
version = "0.1.0"
description = ""
authors = ["PythonNut <PythonNut@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow-gpu = "^2.2.0"
tf_slim = "^1.1.0"
tqdm = "^4.47.0"

[tool.poetry.dev-dependencies]
ipython = "^7.16.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
